fix mobile spacing for #356

--- a/web/themes/custom/asulib_barrio/scss/components/search-form.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/search-form.scss
@@ -65,6 +65,9 @@ nav #search-form {
     }
     form {
         @extend .row;
+        @media (max-width: 768px) {
+            margin: 20px;
+        }
     }
 }
 
